Revision history for Perl extension Make::Cache

The contributors that suggested a given feature are shown in [].
	
* Make::Cache 1.042 2/1/2007

****	Fix Storable error when another process creates runtime
	file simultaneously with our reading it. [Oleg Petlin]

* Make::Cache 1.041 7/27/2006

***	With -gcc option, parse any compiler program as if GCC.

****	With -wrapper option, support purify, etc. in front of compiler name.

* Make::Cache 1.040 2/21/2006

**	By default, copy object files unless passed new --link flag.
	This results in better performance when builds are on
	local disks, and the global directory on network disks.

* Make::Cache 1.030 7/27/2005

***	With --icecream, use icecream instead of logging in remotely.

***	Runtimes now stored separately for each compiler.

****	Support g++ -x option.

* Make::Cache 1.020 5/23/2005

***	With --distcc, use distcc instead of logging in remotely.

* Make::Cache 1.013 10/26/2004

***	Fix nice level under csh.

* Make::Cache 1.012 2/12/2004

***	Fix warning when compiling in background. [Brad Cervenak]

****	Fixes for cpan-testers on sparc-solaris.

* Make::Cache 1.011 2/11/2004

****	Fixes for cpan-testers on sparc-solaris.

* Make::Cache 1.010 2/10/2004

**	obj_cache renamed to objcache, and OBJ_CACHE_* environment
	variables becomes OBJCACHE*. This makes the variable naming
	consistent, and prevents problems in environments where obj_* are
	temporary files.

***	Added objcache --jobs, and OBJCACHE_JOBS documentation.

* Make::Cache 1.000 1/28/2004

**	First public release

----------------------------------------------------------------------
$Id: Changes 31185 2007-02-01 14:40:37Z wsnyder $
DESCRIPTION: Documentation on change history for this package
----------------------------------------------------------------------

This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

Copyright 2003-2007 by Wilson Snyder.  This program is free software;