@@ -1,0 +1,14 @@
+^CVS/
+/CVS/
+.cvsignore$
+pm_to_blib$
+,v$
+\.old/
+\.(bak|old)$
+\bMakefile$
+\.wpsin$
+\.tar\.
+\bblib\b
+^test_dir/
+/test_dir/
+\.svn/
