@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 name:         Make-Cache
-version:      1.042
+version:      1.043
 version_from: Cache.pm
 license:      perl
 installdirs:  site
 requires:
     Digest::MD5:                   1
+    Pod::Usage:                    0
     Storable:                      1
 
 distribution_type: module
