@@ -1,4 +1,4 @@
-#$Id: Gcc.pm 31185 2007-02-01 14:40:37Z wsnyder $
+#$Id: Gcc.pm 46153 2007-10-19 00:26:07Z wsnyder $
 ######################################################################
 #
 # This program is Copyright 2002-2007 by Wilson Snyder.
@@ -25,7 +25,7 @@ use vars qw(@ISA $Debug);
 @ISA=qw(Make::Cache::Obj);
 *Debug = \$Make::Cache::Obj::Debug;  	# "Import" $Debug
 
-our $VERSION = '1.042';
+our $VERSION = '1.043';
 
 #######################################################################
 ## Methods that superclasses are likely to override
