@@ -1,4 +1,4 @@
-#$Id: Obj.pm 31185 2007-02-01 14:40:37Z wsnyder $
+#$Id: Obj.pm 46153 2007-10-19 00:26:07Z wsnyder $
 ######################################################################
 #
 # This program is Copyright 2002-2007 by Wilson Snyder.
@@ -32,7 +32,7 @@ use vars qw(@ISA $Debug);
 @ISA=qw(Make::Cache);
 *Debug = \$Make::Cache::Debug;  	# "Import" $Debug
 
-our $VERSION = '1.042';
+our $VERSION = '1.043';
 
 our $Cc_Running_Lock;
 our $Temp_Filename;
